--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <header>
         <h1>DK Jan Suvidha Kendra</h1>
-        <p>Narnaund, Haryana | Aapki Seva Mein Hamesha Tatpar</p>
+        <p>Ranikheda Chauraha, Bachhrawan | Aapki Seva Mein Hamesha Tatpar</p>
     </header>
 
     <div class="container">
@@ -144,14 +144,14 @@
         <!-- Location / Contact -->
         <div style="margin-top: 50px;">
             <h3>📍 Sampark Karein</h3>
-            <p><strong>Address:</strong> DK Jan Suvidha Kendra, Narnaund, Haryana</p>
-            <p><strong>Mobile:</strong> +91 XXXXX-XXXXX</p>
+            <p><strong>Address:</strong> DK Jan Suvidha Kendra, Ranikheda Chauraha, Bachhrawan</p>
+            <p><strong>Mobile:</strong> +91 8318736819</p>
         </div>
     </div>
 
     <footer>
         <p>© 2025 DK Jan Suvidha Kendra. All Rights Reserved.</p>
-        <p>Developed by DK Raja</p>
+        <p>Developed by DK </p>
     </footer>
 
 </body>
