--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <h2>📱 Hamara Official App Download Karein</h2>
             <p>Sabhi sarkari suvidhaon ka labh apne phone par uthayein.</p>
             <!-- Niche Link ko apne GitHub APK link se badal dein -->
-            <a href="https://github.com/DKRAJA906/DK-JAN-SUVIDHA-KENDRA/releases/download/v5.01/app-release.apk" class="btn">Download Android App</a>
+            <a href="https://github.com/DKRAJA906/DK-JAN-SUVIDHA-KENDRA/releases/download/v5.01/DK.JAN.SUVIDHA.apk" class="btn">Download Android App</a>
         </div>
 
         <!-- Services Section -->
