--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         /* Theme Settings similar to your App */
         :root {
-            --bg-color: #237D23;
+            --bg-color: #808A80;
             --surface-color: #1E1E1E;
             --primary-color: #BB86FC; /* Brand Purple */
             --text-color: #FFFFFF;
