--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
             <h3>📍 Sampark Karein</h3>
             <p><strong>Address:</strong> DK Jan Suvidha Kendra, Ranikheda Chauraha, Bachhrawan</p>
             <p><strong>Mobile:</strong> +91 8318736819</p>
+            <p><strong>Email:</strong> dkjansuvidha@gmail.com</p>
         </div>
     </div>
 
