--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         /* Header */
         header {
-            background-color: var(--surface-color);
+            background-color: #CF2D83;
             padding: 20px;
             text-align: center;
             border-bottom: 2px solid var(--primary-color);
