--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         /* Header */
         header {
-            background-color: #CF2D83;
+            background: liner-gradient(to right,#CF2D83, #3A2DCF);
             padding: 20px;
             text-align: center;
             border-bottom: 2px solid var(--primary-color);
