--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         }
 
         .card {
-            background-color:#2D43CF;
+            background-color:#CF562D;
             padding: 20px;
             border-radius: 10px;
             border: 1px solid #333;
