--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="hi">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=5.0">
     <title>DK Jan Suvidha Kendra</title>
     <style>
         /* Theme Settings similar to your App */
@@ -116,6 +116,8 @@
         <h2 style="color: var(--primary-color);">Hamari Suvidhayein</h2>
         <div class="services-grid">
             <div class="card">
+                <a href="https://uidai.gov.in"
+                    target="_blank" style="text-decoration:none;">
                 <h3>🆔 Aadhaar Services</h3>
                 <p>New Enrollment, Update, Print & Correction.</p>
             </div>
