--- a/index.html
+++ b/index.html
@@ -115,32 +115,56 @@
         <!-- Services Section -->
         <h2 style="color: var(--primary-color);">Hamari Suvidhayein</h2>
         <div class="services-grid">
-            <div class="card">
-                <a href="https://uidai.gov.in"
-                <h3>🆔 Aadhaar Services</h3>
-                <p>New Enrollment, Update, Print & Correction.</p>
-            </div>
-            <div class="card">
-                <h3>💳 PAN Card</h3>
-                <p>Naya PAN Card banwayein ya correction karwayein.</p>
-            </div>
-            <div class="card">
-                <h3>⚡ Bijli Bill</h3>
-                <p>Bill jama karein aur naya connection apply karein.</p>
-            </div>
-            <div class="card">
-                <h3>🚜 PM Kisan</h3>
-                <p>KYC, Registration aur Status check.</p>
-            </div>
-            <div class="card">
-                <h3>🎓 Scholarship & Forms</h3>
-                <p>School/College scholarship aur naukri ke form.</p>
-            </div>
-            <div class="card">
-                <h3>📄 Photocopy & Print</h3>
-                <p>High quality color print aur photo copy.</p>
-            </div>
+    
+    <!-- 1. Aadhaar Card -->
+    <a href="https://uidai.gov.in" target="_blank" style="text-decoration: none;">
+        <div class="card rang-aadhaar">
+            <h3>🆔 Aadhaar Services</h3>
+            <p style="color: white;">New Enrollment, Update, Print & Correction.</p>
         </div>
+    </a>
+
+    <!-- 2. PAN Card -->
+    <a href="https://www.pan.utiitsl.com/newA.html" target="_blank" style="text-decoration: none;">
+        <div class="card rang-pan">
+            <h3>💳 PAN Card</h3>
+            <p style="color: white;">Naya PAN Card banwayein ya correction karwayein.</p>
+        </div>
+    </a>
+
+    <!-- 3. Bijli Bill (UPPCL) -->
+    <a href="https://www.uppcl.org" target="_blank" style="text-decoration: none;">
+        <div class="card rang-bijli">
+            <h3>⚡ Bijli Bill</h3>
+            <p style="color: white;">Bill jama karein aur naya connection apply karein.</p>
+        </div>
+    </a>
+
+    <!-- 4. PM Kisan -->
+    <a href="https://pmkisan.gov.in" target="_blank" style="text-decoration: none;">
+        <div class="card rang-kisan">
+            <h3>🚜 PM Kisan</h3>
+            <p style="color: white;">KYC, Registration aur Status check karein.</p>
+        </div>
+    </a>
+
+    <!-- 5. Scholarship (UP Scholarship) -->
+    <a href="https://scholarship.up.gov.in" target="_blank" style="text-decoration: none;">
+        <div class="card rang-scholar">
+            <h3>🎓 Scholarship & Forms</h3>
+            <p style="color: white;">School/College scholarship aur naukri ke form.</p>
+        </div>
+    </a>
+
+    <!-- 6. Print/Photocopy (Iska koi link nahi hota, toh WhatsApp laga sakte hain) -->
+    <a href="https://wa.me/91XXXXXXXXXX" target="_blank" style="text-decoration: none;">
+        <div class="card rang-print">
+            <h3>📄 Photocopy & Print</h3>
+            <p style="color: white;">High quality color print aur photo copy service.</p>
+        </div>
+    </a>
+
+</div>
 
         <!-- Location / Contact -->
         <div style="margin-top: 50px;">
