--- a/index.html
+++ b/index.html
@@ -157,10 +157,17 @@
     </a>
 
     <!-- 6. Print/Photocopy (Iska koi link nahi hota, toh WhatsApp laga sakte hain) -->
-    <a href="https://wa.me/91XXXXXXXXXX" target="_blank" style="text-decoration: none;">
+    <a href="https://wa.me/918318736819" target="_blank" style="text-decoration: none;">
         <div class="card rang-print">
             <h3>📄 Photocopy & Print</h3>
             <p style="color: white;">High quality color print aur photo copy service.</p>
+        </div>
+    </a>
+    <!-- 7. Npci (Adhar Seeding Any bank Widthuot Visit bank) -->
+    <a href="https://www.npci.org.in/" target="_blank" style="text-decoration: none;">
+        <div class="card rang-print">
+            <h3>📄 Adhar Seeding</h3>
+            <p style="color: white;">Adhar Seeding Any bank Widthuot Visit bank.</p>
         </div>
     </a>
 
