--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
             padding: 20px;
             text-align: center;
         }
-<!-- Scrolling News Animation Start -->
-<div style="background: linear-gradient(to right, #FF512F, #DD2476); color: white; padding: 10px; border-radius: 5px; margin-bottom: 20px; border: 2px solid white;">
-    <marquee behavior="scroll" direction="left" scrollamount="10">
-        📢 <b>Latest Update:</b> Yahan Aadhaar Card, Pan Card, PM Kisan KYC, aur Sabhi Prakar ke Online Form Bhare Jate Hain. | Mobile: +91 99999-99999
+<!-- News Ticker Start -->
+<div style="background-color: #ff0000; color: #ffffff; padding: 12px; margin: 15px auto; width: 95%; border-radius: 8px; border: 2px solid #ffffff; box-shadow: 0 4px 8px rgba(0,0,0,0.5);">
+    <marquee style="font-size: 18px; font-weight: bold;">
+        📢 Dhyan Dein: PM Kisan ki eKYC shuru ho gayi hai. Aadhaar correction ke liye aaj hi sampark karein. Mobile: 99999-99999
     </marquee>
 </div>
-<!-- Scrolling News Animation End -->
+<!-- News Ticker End -->
         /* App Download Section */
         .download-box {
             background: linear-gradient(45deg, #3700b3, #6200ea);
