--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         .rang-kisan { background: linear-gradient(135deg, #11998e, #38ef7d); }
         .rang-scholar { background: linear-gradient(135deg, #8E2DE2, #4A00E0); }
         .rang-print { background: linear-gradient(135deg, #CB356B, #BD3F32); }
+        .rang-bg { background: linear-gradient(135deg, #CB356B, #f12711); }
 
         footer {
             text-align: center;
@@ -180,6 +181,13 @@
                 <div class="card rang-print">
                     <h3>📄 Aadhaar Seeding</h3>
                     <p style="color: white;">Aadhaar Seeding Any bank Without Visit bank.</p>
+                </div>
+            </a>
+            <!-- 7. BG REMOVE -->
+            <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
+                <div class="card rang-print">
+                    <h3>📄 BG REMOVE</h3>
+                    <p style="color: white;">kisi bhi photo ka background remove kare.</p>
                 </div>
             </a>
 
