--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DK Jan Suvidha Kendra</title>
+    <!-- Stylish Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
     <style>
         /* Theme Settings */
         :root {
@@ -28,7 +30,27 @@
             border-bottom: 2px solid var(--primary-color);
         }
 
-        h1 { margin: 0; color: var(--primary-color); }
+     h1 { 
+    margin: 0; 
+    color: #ffffff;  /* Text White rakhein taaki Dark background pe dikhe */
+    font-family: 'Poppins', sans-serif; /* Stylish Font */
+    font-size: 42px; /* Text Size Bada kiya */
+    font-weight: 800; /* Text Mota (Bold) kiya */
+    text-transform: uppercase; /* Sab Capital Letters mein */
+    letter-spacing: 2px; /* Aksharon ke beech gap */
+    text-shadow: 3px 3px 0px #000000; /* Text ke peeche kaala shadow */
+}
+        /* Header ke andar wale <p> tag ke liye */
+header p {
+    color: #f0f0f0;
+    font-size: 16px;
+    margin-top: 10px;
+    font-weight: 500;
+    background-color: rgba(0,0,0,0.2); /* Thoda sa background */
+    display: inline-block;
+    padding: 5px 15px;
+    border-radius: 20px;
+}
         p { color: #e0e0e0; }
 
         .container {
