--- a/index.html
+++ b/index.html
@@ -90,21 +90,57 @@ header p {
             margin-top: 20px;
         }
 
-        .card {
-            background-color: #CF562D;
-            padding: 20px;
-            border-radius: 10px;
-            border: 1px solid #333;
-            transition: transform 0.3s;
-        }
-        
-        .card:hover {
-            transform: translateY(-5px);
-            border-color: var(--primary-color);
-        }
+        /* Naya Stylish 3D Card Code */
+.card {
+    /* Background Colors neeche wali classes se aayenge */
+    padding: 25px;
+    border-radius: 15px;
+    border: none;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.3), inset 0 0 0 1px rgba(255,255,255,0.1);
+    transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    position: relative;
+    overflow: hidden;
+}
 
-        .card h3 { color: var(--primary-color); margin-bottom: 10px; }
+.card:hover {
+    transform: translateY(-8px) scale(1.03);
+    box-shadow: 0 20px 30px rgba(0,0,0,0.4);
+    filter: brightness(1.1);
+    z-index: 10;
+}
 
+/* Shine Effect (Chamak) */
+.card::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
+    transition: 0.5s;
+}
+
+.card:hover::after {
+    left: 100%;
+}
+
+.card h3 { 
+    color: #fff; 
+    font-size: 22px; 
+    font-weight: bold; 
+    margin-bottom: 8px; 
+    text-transform: uppercase;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+}
+
+.card p {
+    color: #fff;
+    font-size: 14px;
+    opacity: 0.95;
+    line-height: 1.4;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
+}
         /* Color Classes for Buttons */
         .rang-aadhaar { background: linear-gradient(135deg, #FF512F, #DD2476); }
         .rang-pan { background: linear-gradient(135deg, #1A2980, #26D0CE); }
