--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ header p {
         .rang-scholar { background: linear-gradient(135deg, #8E2DE2, #4A00E0); }
         .rang-print { background: linear-gradient(135deg, #CB356B, #BD3F32); }
         .rang-bg { background: linear-gradient(135deg, #CB356B, #f12711); }
+        .rang-resume { background: linear-gradient(135deg, #CB356B, #f12711); }
 
         footer {
             text-align: center;
@@ -193,6 +194,7 @@ header p {
                     <p style="color: white;">New Enrollment, Update, Print & Correction.</p>
                 </div>
             </a>
+            <a href="resume.html" class="button">Create Free Resume</a>
 
             <!-- 2. PAN Card -->
             <a href="https://www.pan.utiitsl.com/newA.html" target="_blank" style="text-decoration: none;">
