--- a/index.html
+++ b/index.html
@@ -194,8 +194,14 @@ header p {
                     <p style="color: white;">New Enrollment, Update, Print & Correction.</p>
                 </div>
             </a>
+            <!-- 1. Rusume Builer -->
             <a href="resume.html" class="button">Create Free Resume</a>
-
+                <div class="card rang-resume">
+                    <h3>🆔 Resume Build</h3>
+                    <p style="color: white;">Profeshnol Resume.</p>
+                </div>
+            </a>
+            
             <!-- 2. PAN Card -->
             <a href="https://www.pan.utiitsl.com/newA.html" target="_blank" style="text-decoration: none;">
                 <div class="card rang-pan">
