--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ header p {
     <!-- News Ticker YAHAN SAHI JAGAH HAI -->
     <div style="background-color: #ff0000; color: #ffffff; padding: 12px; margin: 10px auto; width: 95%; max-width: 1000px; border-radius: 8px; border: 2px solid #ffffff; box-shadow: 0 4px 8px rgba(0,0,0,0.5);">
         <marquee behavior="scroll" direction="left" scrollamount="10" style="font-size: 18px; font-weight: bold;">
-            📢 Dhyan Dein: PM Kisan ki eKYC shuru ho gayi hai. Aadhaar correction ke liye aaj hi sampark karein. Mobile: 8318736819
+            📢 डीके जन सुविधा केंद्र आपका हार्दिक स्वागत करता है हमारे पोर्टल पर . Mobile: 8318736819
         </marquee>
     </div>
 
