--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ header p {
                 </div>
             </a>
             <!-- 1. Rusume Builer -->
-            <a href="resume.html" 
+            <a href="resume.html" target="_blank" style=text-decoration: none;">
                 <div class="card rang-resume">
                     <h3>🆔 Resume Build</h3>
                     <p style="color: white;">Profeshnol Resume.</p>
