--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ header p {
             <!-- 1. Rusume Builer -->
             <a href="resume.html" target="_blank" style=text-decoration: none;">
                 <div class="card rang-resume">
-                    <h3>🆔 Resume Build</h3>
+                    <h3>🧾 Resume Build</h3>
                     <p style="color: white;">Profeshnol Resume.</p>
                 </div>
             </a>
@@ -245,14 +245,14 @@ header p {
             <!-- 7. NPCI -->
             <a href="https://www.npci.org.in/" target="_blank" style="text-decoration: none;">
                 <div class="card rang-print">
-                    <h3>📄 Aadhaar Seeding</h3>
+                    <h3>🏦 Aadhaar Seeding</h3>
                     <p style="color: white;">Aadhaar Seeding Any bank Without Visit bank.</p>
                 </div>
             </a>
             <!-- 7. BG REMOVE -->
             <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
                 <div class="card rang-print">
-                    <h3>📄 BG REMOVE</h3>
+                    <h3>🧑‍💼 BG REMOVE</h3>
                     <p style="color: white;">kisi bhi photo ka background remove kare.</p>
                 </div>
             </a>
@@ -263,8 +263,8 @@ header p {
         <div style="margin-top: 50px;">
             <h3>📍 Sampark Karein</h3>
             <p><strong>Address:</strong> DK Jan Suvidha Kendra, Ranikheda Chauraha, Bachhrawan</p>
-            <p><strong>Mobile:</strong> +91 8318736819</p>
-            <p><strong>Email:</strong> dkjansuvidha@gmail.com</p>
+            <p><strong>Mobile☎️:</strong> +91 8318736819</p>
+            <p><strong>Email:📧</strong> dkjansuvidha@gmail.com</p>
         </div>
     </div>
 
