--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
         }
 
         header {
-            background-color: #CF2D83;
-            padding: 20px;
-            text-align: center;
-            border-bottom: 2px solid var(--primary-color);
+            background: linear-gradient(to right, #D12E83, #A6266E);
+    
+    /* टेक्स्ट कलर और पैडिंग */
+    color: white;
+    padding: 30px;
+    text-align: center;
+    font-family: Arial, sans-serif;
         }
 
      h1 { 
