--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         header {
-            background: linear-gradient(to right, #D12E83, #A6266E);
+             background: linear-gradient(135deg, #f12711, #f5af19); 
     
     /* टेक्स्ट कलर और पैडिंग */
     color: white;
