--- a/index.html
+++ b/index.html
@@ -164,14 +164,19 @@ header p {
 }
         /* Color Classes for Buttons */
         .rang-aadhaar { background: linear-gradient(135deg, #FF512F, #DD2476); }
+        .rang-Rusume { background: linear-gradient(135deg, #1A2980, #26D0CE); }
+        .rang-PAN { background: linear-gradient(135deg, #f12711, #f5af19); }
+        .rang-Bijli { background: linear-gradient(135deg, #11998e, #38ef7d); }
+        .rang-PM { background: linear-gradient(135deg, #8E2DE2, #4A00E0); }
+        .rang-Scholarship { background: linear-gradient(135deg, #CB356B, #BD3F32); }
+        .rang-NPCI { background: linear-gradient(135deg, #CB356B, #f12711); }
+        .rang-BG { background: linear-gradient(135deg, #CB356B, #f12711); }
         .rang-pan { background: linear-gradient(135deg, #1A2980, #26D0CE); }
+        .rang-bijli { background: linear-gradient(135deg, #f12711, #f5af19); }
         .rang-bijli { background: linear-gradient(135deg, #f12711, #f5af19); }
         .rang-kisan { background: linear-gradient(135deg, #11998e, #38ef7d); }
         .rang-scholar { background: linear-gradient(135deg, #8E2DE2, #4A00E0); }
         .rang-print { background: linear-gradient(135deg, #CB356B, #BD3F32); }
-        .rang-bg { background: linear-gradient(135deg, #CB356B, #f12711); }
-        .rang-resume { background: linear-gradient(135deg, #CB356B, #f12711); }
-
         footer {
             text-align: center;
             padding: 20px;
@@ -222,7 +227,7 @@ header p {
                     <p style="color: white;">New Enrollment, Update, Print & Correction.</p>
                 </div>
             </a>
-            <!-- 1. Rusume Builer -->
+            <!-- 2. Rusume Builer -->
             <a href="resume.html" target="_blank" style=text-decoration: none;">
                 <div class="card rang-resume">
                     <h3>🧾 Resume Build</h3>
@@ -230,7 +235,7 @@ header p {
                 </div>
             </a>
             
-            <!-- 2. PAN Card -->
+            <!-- 3. PAN Card -->
             <a href="https://www.pan.utiitsl.com/newA.html" target="_blank" style="text-decoration: none;">
                 <div class="card rang-pan">
                     <h3>💳 PAN Card</h3>
@@ -238,7 +243,7 @@ header p {
                 </div>
             </a>
 
-            <!-- 3. Bijli Bill -->
+            <!-- 4. Bijli Bill -->
             <a href="https://www.uppcl.org" target="_blank" style="text-decoration: none;">
                 <div class="card rang-bijli">
                     <h3>⚡ Bijli Bill</h3>
@@ -246,7 +251,7 @@ header p {
                 </div>
             </a>
 
-            <!-- 4. PM Kisan -->
+            <!-- 5. PM Kisan -->
             <a href="https://pmkisan.gov.in" target="_blank" style="text-decoration: none;">
                 <div class="card rang-kisan">
                     <h3>🚜 PM Kisan</h3>
@@ -254,19 +259,11 @@ header p {
                 </div>
             </a>
 
-            <!-- 5. Scholarship -->
+            <!-- 6. Scholarship -->
             <a href="https://scholarship.up.gov.in" target="_blank" style="text-decoration: none;">
                 <div class="card rang-scholar">
                     <h3>🎓 Scholarship & Forms</h3>
                     <p style="color: white;">School/College scholarship aur naukri ke form.</p>
-                </div>
-            </a>
-
-            <!-- 6. Photocopy -->
-            <a href="https://wa.me/918318736819" target="_blank" style="text-decoration: none;">
-                <div class="card rang-print">
-                    <h3>📄 Photocopy & Print</h3>
-                    <p style="color: white;">High quality color print aur photo copy service.</p>
                 </div>
             </a>
 
@@ -277,15 +274,63 @@ header p {
                     <p style="color: white;">Aadhaar Seeding Any bank Without Visit bank.</p>
                 </div>
             </a>
-            <!-- 7. BG REMOVE -->
+            <!-- 8. BG REMOVE -->
             <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
                 <div class="card rang-print">
                     <h3>🧑‍💼 BG REMOVE</h3>
                     <p style="color: white;">kisi bhi photo ka background remove kare.</p>
                 </div>
             </a>
-
+           <!-- 9. BG REMOVE -->
+            <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
+                <div class="card rang-print">
+                    <h3>🧑‍💼 BG REMOVE</h3>
+                    <p style="color: white;">kisi bhi photo ka background remove kare.</p>
+                </div>
+            </a>
         </div>
+        <!-- 10. BG REMOVE -->
+            <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
+                <div class="card rang-print">
+                    <h3>🧑‍💼 BG REMOVE</h3>
+                    <p style="color: white;">kisi bhi photo ka background remove kare.</p>
+                </div>
+            </a>
+        <!-- 11. BG REMOVE -->
+            <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
+                <div class="card rang-print">
+                    <h3>🧑‍💼 BG REMOVE</h3>
+                    <p style="color: white;">kisi bhi photo ka background remove kare.</p>
+                </div>
+            </a>
+        <!-- 12. BG REMOVE -->
+            <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
+                <div class="card rang-print">
+                    <h3>🧑‍💼 BG REMOVE</h3>
+                    <p style="color: white;">kisi bhi photo ka background remove kare.</p>
+                </div>
+            </a>
+        <!-- 14. BG REMOVE -->
+            <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
+                <div class="card rang-print">
+                    <h3>🧑‍💼 BG REMOVE</h3>
+                    <p style="color: white;">kisi bhi photo ka background remove kare.</p>
+                </div>
+            </a>
+        <!-- 13. BG REMOVE -->
+            <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
+                <div class="card rang-print">
+                    <h3>🧑‍💼 BG REMOVE</h3>
+                    <p style="color: white;">kisi bhi photo ka background remove kare.</p>
+                </div>
+            </a>
+        <!-- 14. BG REMOVE -->
+            <a href="https://www.remove.bg/" target="_blank" style="text-decoration: none;">
+                <div class="card rang-print">
+                    <h3>🧑‍💼 BG REMOVE</h3>
+                    <p style="color: white;">kisi bhi photo ka background remove kare.</p>
+                </div>
+            </a>
 
         <!-- Contact Section -->
         <div style="margin-top: 50px;">
