--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
         .rang-scholar { background: linear-gradient(135deg, #8E2DE2, #4A00E0); }
         .rang-print { background: linear-gradient(135deg, #CB356B, #BD3F32); }
         .rang-bg { background: linear-gradient(135deg, #4b6cb7, #182848); } /* New Blue Color */
+        .rang-photo { background: linear-gradient(135deg, #4b6cb7, #E019DA); }
 
         footer {
             text-align: center;
@@ -281,6 +282,13 @@
                 <div class="card rang-resume">
                     <h3>🖨️ Photocopy</h3>
                     <p>High Quality Color & B/W Print.</p>
+                </div>
+            </a>
+            <!-- 9. Photo Resize -->
+            <a href="https://www.reduceimages.com/" style="text-decoration: none;">
+                <div class="card rang-resume">
+                    <h3>🖨️ Photo Resize</h3>
+                    <p>Any photo resize one click.</p>
                 </div>
             </a>
 
