--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         .rang-scholar { background: linear-gradient(135deg, #8E2DE2, #4A00E0); }
         .rang-print { background: linear-gradient(135deg, #CB356B, #BD3F32); }
         .rang-bg { background: linear-gradient(135deg, #4b6cb7, #182848); } /* New Blue Color */
-        .rang-photo { background: linear-gradient(135deg, #8319E0, #E019DA); }
+        .rang-photo { background: linear-gradient(135deg, #0BEF31, #E019DA); }
 
         footer {
             text-align: center;
