--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             </a>
             <!-- 9. Photo Resize -->
             <a href="https://www.reduceimages.com/" style="text-decoration: none;">
-                <div class="card rang-Photo">
+                <div class="card rang-photo">
                     <h3>🖨️ Photo Resize</h3>
                     <p>Any photo resize one click.</p>
                 </div>
