--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
         .rang-print { background: linear-gradient(135deg, #CB356B, #BD3F32); }
         .rang-bg { background: linear-gradient(135deg, #4b6cb7, #182848); } /* New Blue Color */
         .rang-photo { background: linear-gradient(135deg, #0BEF31, #E019DA); }
+        .rang-khatauni { background: linear-gradient(135deg, #F7020F, #3620D9); }
 
         footer {
             text-align: center;
@@ -284,14 +285,20 @@
                     <p>High Quality Color & B/W Print.</p>
                 </div>
             </a>
-            <!-- 9. Photo Resize -->
+            <!-- 10. Photo Resize -->
             <a href="https://www.reduceimages.com/" style="text-decoration: none;">
                 <div class="card rang-photo">
                     <h3>🖨️ Photo Resize</h3>
                     <p>Any photo resize one click.</p>
                 </div>
             </a>
-
+            <!-- 11. Khatauni nakal -->
+            <a href="https://upbhulekh.gov.in/#/home" style="text-decoration: none;">
+                <div class="card rang-khatauni">
+                    <h3>🖨️ Khatauni nakal</h3>
+                    <p>Up ke sabhi jilo ka khatauni.</p>
+                </div>
+            </a>
         </div> <!-- Services Grid Khatam -->
 
         <!-- Contact Section -->
