--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
         .rang-bg { background: linear-gradient(135deg, #4b6cb7, #182848); } /* New Blue Color */
         .rang-photo { background: linear-gradient(135deg, #0BEF31, #E019DA); }
         .rang-khatauni { background: linear-gradient(135deg, #F7020F, #3620D9); }
+        .rang-epfo { background: linear-gradient(135deg, #79E713, #0AF0B6); }
+        .rang-voter { background: linear-gradient(135deg, #0AF0E4, #F109CE); }
+
+
 
         footer {
             text-align: center;
@@ -297,6 +301,20 @@
                 <div class="card rang-khatauni">
                     <h3>🖨️ Khatauni nakal</h3>
                     <p>Up ke sabhi jilo ka khatauni.</p>
+                </div>
+            </a>
+            <!-- 12. Epfo -->
+            <a href="https://www.epfindia.gov.in/site_en/index.php" style="text-decoration: none;">
+                <div class="card rang-epfo">
+                    <h3>🖨️ Epfo</h3>
+                    <p>Pf related service.</p>
+                </div>
+            </a>
+            <!-- 13. Voter Card -->
+            <a href="https://voters.eci.gov.in/" style="text-decoration: none;">
+                <div class="card rang-voter">
+                    <h3>🖨️ Voter Card</h3>
+                    <p>Voter card related service.</p>
                 </div>
             </a>
         </div> <!-- Services Grid Khatam -->
