--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
         .rang-khatauni { background: linear-gradient(135deg, #F7020F, #3620D9); }
         .rang-epfo { background: linear-gradient(135deg, #79E713, #0AF0B6); }
         .rang-voter { background: linear-gradient(135deg, #0AF0E4, #F109CE); }
+        .rang-pension { background: linear-gradient(135deg, #F18909, #1201F9); }
+        .rang-pdf { background: linear-gradient(135deg, #F00A5E, #75F505); }
 
 
 
@@ -315,6 +317,20 @@
                 <div class="card rang-voter">
                     <h3>🖨️ Voter Card</h3>
                     <p>Voter card related service.</p>
+                </div>
+            </a>
+            <!-- 13. Pension Portal UP -->
+            <a href="https://sspy-up.gov.in/HindiPages/index_h.aspx" style="text-decoration: none;">
+                <div class="card rang-pension">
+                    <h3>🖨️ Pension Portal up</h3>
+                    <p>Pension related service.</p>
+                </div>
+            </a>
+            <!-- 13. Pdf Master -->
+            <a href="https://www.ilovepdf.com/jpg_to_pdf" style="text-decoration: none;">
+                <div class="card rang-pdf">
+                    <h3>🖨️ Pdf Master</h3>
+                    <p>A2Z pdf work.</p>
                 </div>
             </a>
         </div> <!-- Services Grid Khatam -->
