--- a/index.html
+++ b/index.html
@@ -170,10 +170,12 @@
         .rang-bg { background: linear-gradient(135deg, #4b6cb7, #182848); } /* New Blue Color */
         .rang-photo { background: linear-gradient(135deg, #0BEF31, #E019DA); }
         .rang-khatauni { background: linear-gradient(135deg, #F7020F, #3620D9); }
-        .rang-epfo { background: linear-gradient(135deg, #79E713, #0AF0B6); }
+        .rang-epfo { background: linear-gradient(135deg, #79E713, #F0290A); }
         .rang-voter { background: linear-gradient(135deg, #0AF0E4, #F109CE); }
         .rang-pension { background: linear-gradient(135deg, #F18909, #1201F9); }
         .rang-pdf { background: linear-gradient(135deg, #F00A5E, #75F505); }
+        .rang-pdf { background: linear-gradient(135deg, #F00A5E, #75F505); }
+        .rang-udyam { background: linear-gradient(135deg, #CA52FA, #0EECE5); }
 
 
 
@@ -312,25 +314,32 @@
                     <p>Pf related service.</p>
                 </div>
             </a>
-            <!-- 13. Voter Card -->
+            <!-- 14. Voter Card -->
             <a href="https://voters.eci.gov.in/" style="text-decoration: none;">
                 <div class="card rang-voter">
                     <h3>🖨️ Voter Card</h3>
                     <p>Voter card related service.</p>
                 </div>
             </a>
-            <!-- 13. Pension Portal UP -->
+            <!-- 15. Pension Portal UP -->
             <a href="https://sspy-up.gov.in/HindiPages/index_h.aspx" style="text-decoration: none;">
                 <div class="card rang-pension">
                     <h3>🖨️ Pension Portal up</h3>
                     <p>Pension related service.</p>
                 </div>
             </a>
-            <!-- 13. Pdf Master -->
+            <!-- 16. Pdf Master -->
             <a href="https://www.ilovepdf.com/jpg_to_pdf" style="text-decoration: none;">
                 <div class="card rang-pdf">
                     <h3>🖨️ Pdf Master</h3>
                     <p>A2Z pdf work.</p>
+                </div>
+            </a>
+            <!-- 17. Udyam Adhar -->
+            <a href="https://udyamregistration.gov.in/Government-India/Ministry-MSME-registration.htm" style="text-decoration: none;">
+                <div class="card rang-udyam">
+                    <h3>🖨️ Udyam Adhar</h3>
+                    <p>udyamregistration.</p>
                 </div>
             </a>
         </div> <!-- Services Grid Khatam -->
