--- a/index.html
+++ b/index.html
@@ -296,49 +296,49 @@
             <!-- 10. Photo Resize -->
             <a href="https://www.reduceimages.com/" style="text-decoration: none;">
                 <div class="card rang-photo">
-                    <h3>🖨️ Photo Resize</h3>
+                    <h3>🧖 Photo Resize</h3>
                     <p>Any photo resize one click.</p>
                 </div>
             </a>
             <!-- 11. Khatauni nakal -->
             <a href="https://upbhulekh.gov.in/#/home" style="text-decoration: none;">
                 <div class="card rang-khatauni">
-                    <h3>🖨️ Khatauni nakal</h3>
+                    <h3>🧾 Khatauni nakal</h3>
                     <p>Up ke sabhi jilo ka khatauni.</p>
                 </div>
             </a>
             <!-- 12. Epfo -->
             <a href="https://www.epfindia.gov.in/site_en/index.php" style="text-decoration: none;">
                 <div class="card rang-epfo">
-                    <h3>🖨️ Epfo</h3>
+                    <h3>💵 Epfo</h3>
                     <p>Pf related service.</p>
                 </div>
             </a>
             <!-- 14. Voter Card -->
             <a href="https://voters.eci.gov.in/" style="text-decoration: none;">
                 <div class="card rang-voter">
-                    <h3>🖨️ Voter Card</h3>
+                    <h3>🎫 Voter Card</h3>
                     <p>Voter card related service.</p>
                 </div>
             </a>
             <!-- 15. Pension Portal UP -->
             <a href="https://sspy-up.gov.in/HindiPages/index_h.aspx" style="text-decoration: none;">
                 <div class="card rang-pension">
-                    <h3>🖨️ Pension Portal up</h3>
+                    <h3>💰 Pension Portal up</h3>
                     <p>Pension related service.</p>
                 </div>
             </a>
             <!-- 16. Pdf Master -->
             <a href="https://www.ilovepdf.com/jpg_to_pdf" style="text-decoration: none;">
                 <div class="card rang-pdf">
-                    <h3>🖨️ Pdf Master</h3>
+                    <h3>🎟️ Pdf Master</h3>
                     <p>A2Z pdf work.</p>
                 </div>
             </a>
             <!-- 17. Udyam Adhar -->
             <a href="https://udyamregistration.gov.in/Government-India/Ministry-MSME-registration.htm" style="text-decoration: none;">
                 <div class="card rang-udyam">
-                    <h3>🖨️ Udyam Adhar</h3>
+                    <h3>🪪 Udyam Adhar</h3>
                     <p>udyamregistration.</p>
                 </div>
             </a>
