--- a/index.html
+++ b/index.html
@@ -351,6 +351,16 @@
             <p><strong>Mobile☎️:</strong> +91 8318736819</p>
             <p><strong>Email:📧</strong> dkjansuvidha@gmail.com</p>
         </div>
+        <!-- Disclaimer Section -->
+<div class="disclaimer-box" style="margin-top: 40px; padding: 20px; background-color: rgba(255,255,255,0.05); border-left: 4px solid #f1c40f; border-radius: 5px; text-align: left;">
+    <h4 style="color: #f1c40f; margin-top: 0; margin-bottom: 10px;">⚠️ अस्वीकरण (Disclaimer):</h4>
+    <p style="font-size: 13px; color: #ccc; line-height: 1.6; margin: 0;">
+        डीके जन सुविधा केंद्र (DK Jan Suvidha Kendra) एक निजी सेवा प्रदाता है। हम सरकारी योजनाओं के फॉर्म भरने और ऑनलाइन सेवाओं में मदद करते हैं। 
+        हम किसी भी सरकारी विभाग का प्रतिनिधित्व नहीं करते हैं। इस वेबसाइट पर दी गई सभी जानकारी केवल सूचना और सहायता के उद्देश्य से है। 
+        हम सटीक जानकारी देने की पूरी कोशिश करते हैं, फिर भी किसी भी त्रुटि (गलती) के लिए हम जिम्मेदार नहीं होंगे। 
+        कृपया कोई भी आवेदन करने से पहले आधिकारिक सरकारी वेबसाइट पर जानकारी की पुष्टि जरूर करें।
+    </p>
+</div>
     </div>
 
     <footer>
