--- a/index.html
+++ b/index.html
@@ -355,10 +355,10 @@
 <div class="disclaimer-box" style="margin-top: 40px; padding: 20px; background-color: rgba(255,255,255,0.05); border-left: 4px solid #f1c40f; border-radius: 5px; text-align: left;">
     <h4 style="color: #f1c40f; margin-top: 0; margin-bottom: 10px;">⚠️ अस्वीकरण (Disclaimer):</h4>
     <p style="font-size: 13px; color: #ccc; line-height: 1.6; margin: 0;">
-        डीके जन सुविधा केंद्र (DK Jan Suvidha Kendra) एक निजी सेवा प्रदाता है। हम सरकारी योजनाओं के फॉर्म भरने और ऑनलाइन सेवाओं में मदद करते हैं। 
-        हम किसी भी सरकारी विभाग का प्रतिनिधित्व नहीं करते हैं। इस वेबसाइट पर दी गई सभी जानकारी केवल सूचना और सहायता के उद्देश्य से है। 
-        हम सटीक जानकारी देने की पूरी कोशिश करते हैं, फिर भी किसी भी त्रुटि (गलती) के लिए हम जिम्मेदार नहीं होंगे। 
-        कृपया कोई भी आवेदन करने से पहले आधिकारिक सरकारी वेबसाइट पर जानकारी की पुष्टि जरूर करें।
+        DK Jan Suvidha Kendra is a private service provider. We assist with filling out government scheme forms and providing online services.
+        We do not represent any government department. All information provided on this website is for informational and assistance purposes only.
+        While we strive to provide accurate information, we will not be held responsible for any errors.
+        Please verify the information on the official government website before submitting any application.
     </p>
 </div>
     </div>
