--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <!-- About Us Button -->
     <a href="#aboutUs" onclick="document.getElementById('aboutUs').style.display='flex'; return false;" 
        style="color: #03DAC6; text-decoration: underline; cursor: pointer; font-weight: bold;">
-       ℹ️ हमारे बारे में (About Us)
+       ℹ️About Us
     </a>
 
     <!-- Privacy Policy Button -->
@@ -426,7 +426,7 @@
         <p>Developed by DK</p>
         <!-- Visitor Counter Code -->
 <div style="text-align: center; margin-top: 20px; padding: 10px; background: rgba(255, 255, 255, 0.1); border-radius: 5px; color: #03DAC6; font-weight: bold; font-family: monospace;">
-    👥 वेबसाइट विजिटर (Total Views): <span id="visits" style="color: white;">0</span>
+    Total Views: <span id="visits" style="color: white;">0</span>
 </div>
 
 <script>
